src/components/GenerationSelector.css
.container {
  display: flex;
  background-color: rgba(0, 0, 0, 0.05);
  padding: 1rem;
  border-radius: 1rem;
  max-width: 6rem;
  transition: max-width 1s;
}

.container:hover {
  max-width: 100rem;
}

.dot {
  width: 0.7rem;
  aspect-ratio: 1;
  border-radius: 50%;
  display: inline-block;
  border: 1px solid white;
  margin-right: 0.2rem;
}

.generation {
  flex-shrink: 0;
  margin: 0 1rem 0 0;
  padding: 0.1rem 0.2rem;
  cursor: pointer;
  user-select: none;
  word-spacing: -0.5rem;
  letter-spacing: -0.1rem;
  border-radius: 1rem;
  transition: opacity 0.8s;
}

.generation:not(:first-child) {
  opacity: 0;
}

.container:hover > * {
  opacity: 1;
}

.generation:hover {
  background-color: rgba(255, 255, 255, 0.13);
}

